--- a/homework/css/weather-style.css
+++ b/homework/css/weather-style.css
@@ -1,13 +1,6 @@
-/*Change the CSS box model*/
-
 html * {
     box-sizing: border-box;
 }
-
-
-/**:before, *:after{
-    box-sizing: border-box;
-}*/
 
 body {
     background-color: deepskyblue;
@@ -17,35 +10,29 @@ body {
 nav,
 .title {
     background-color: #808080;
-    padding: 0px;
     border: 2px solid #000000;
-    margin: 0px;
     margin-bottom: 8px;
     display: flex;
+    justify-content: space-around;
     color: white;
 }
 
 #main-title {
     color: white;
     font-family: Tahoma, Geneva, sans-serif;
-    padding-right: 10%;
-    margin-left: auto;
-    font-size: 140%;
+    font-size: 1.4em;
 }
 
 #zip {
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
     padding-top: 0px;
     font-family: Tahoma, Geneva, sans-serif;
-    font-size: 90%;
+    font-size: .9em;
 }
 
 .menu {
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-grow: 2;
     padding: 0px;
 }
@@ -61,21 +48,19 @@ a:active {
 }
 
 .menu-item {
-    margin-left: auto;
-    margin-right: auto;
     font-family: Tahoma, Geneva, sans-serif;
-    font-size: 80%;
+    font-size: .8em;
 }
 
 .temperature {
     background-color: #808080;
     border: 2px solid #000000;
-    margin: 0px;
     margin-bottom: 8px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     color: white;
+    font-family: Tahoma, Geneva, sans-serif;
 }
 
 .temperature > h2 {
@@ -89,10 +74,13 @@ a:active {
     font-family: Tahoma, Geneva, sans-serif;
 }
 
-#hi {
-    margin-bottom: 0px;
-}
-
-#lo {
+.summary h4 {
+    background-color: #808080;
+    border: 2px solid #000000;
     margin-top: 0px;
+    margin-bottom: 8px;
+    color: white;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: .9em;
+    text-align: center;
 }
