--- a/homework/css/weather-style.css
+++ b/homework/css/weather-style.css
@@ -83,4 +83,53 @@ a:active {
     font-family: Tahoma, Geneva, sans-serif;
     font-size: .9em;
     text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.coordinates {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.hourly-container {
+    background-color: #808080;
+    border: 2px solid #000000;
+    margin-top: 0px;
+    margin-bottom: 8px;
+    color: white;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: .9em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hourly-container h4 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.hourly-data {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 300px;
+}
+
+.data-left,
+.data-right {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+.data-left {
+    text-align: right;
+}
+
+.data-right {
+    text-align: right;
 }
