--- a/homework/css/weather-style.css
+++ b/homework/css/weather-style.css
@@ -23,8 +23,11 @@ nav,
     font-size: 1.4em;
 }
 
+.title {
+    align-items: center;
+}
+
 #zip {
-    padding-top: 0px;
     font-family: Tahoma, Geneva, sans-serif;
     font-size: .9em;
 }
@@ -132,4 +135,17 @@ a:active {
 
 .data-right {
     text-align: right;
+}
+
+@media screen and (min-width: 750px) {
+    body {
+        background-color: darkred;
+        font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    body {
+        background-color: coral;
+    }
 }
