--- a/homework/css/weather-style.css
+++ b/homework/css/weather-style.css
@@ -118,12 +118,19 @@ a:active {
 .hourly-data {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     width: 300px;
 }
 
+.hourly-data-ls {
+    display: none;
+}
+
 .data-left,
-.data-right {
+.data-right,
+.data-mid-left,
+.data-mid-right {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
@@ -133,19 +140,44 @@ a:active {
     text-align: right;
 }
 
+.data-mid-left {
+    text-align: right;
+}
+
+.data-mid-right {
+    text-align: right;
+}
+
 .data-right {
     text-align: right;
 }
 
 @media screen and (min-width: 750px) {
     body {
-        background-color: darkred;
-        font-size: 24px;
+        margin: 10%;
+        margin-top: 0%;
+    }
+    .hourly-data {
+        display: none;
+    }
+    .hourly-data-ls {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 300px;
+    }
+    .hourly-data-ls li {
+        width: 130px;
+    }
+    .hourly-data-ls ul {
+        margin-right: 5px;
+        margin-left: 5px;
     }
 }
 
 @media screen and (min-width: 1100px) {
     body {
-        background-color: coral;
+        margin-left: 15%;
+        margin-right: 15%;
     }
 }
