--- a/css/weather.css
+++ b/css/weather.css
@@ -206,7 +206,26 @@ figure {
 }
 
 .hr-temp {
-    display: none;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 75%;
+    background-color: rgba(200, 200, 200, .7);
+    margin-bottom: 30px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+.hr-lists {
+    display: flex;
+    justify-content: space-between;
+    width: 100px;
+    text-align: right;
+}
+
+.hr-temp ul {
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 footer {
@@ -271,8 +290,8 @@ footer {
 
     #cur-cond-img {
         display: block;
-        width: 50%;
-        height: 50%;
+        width: 40%;
+        height: 40%;
         justify-content: center;
         margin: 0em .5em;
     }
@@ -297,27 +316,6 @@ footer {
     #sum-banner {
         display: block;
         margin-bottom: 10px;
-    }
-
-    .hr-temp {
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-        width: 75%;
-        background-color: rgba(200, 200, 200, .6);
-        border: 1px solid;
-        border-radius: 10px;
-    }
-
-    .hr-lists {
-        display: flex;
-        justify-content: space-between;
-        width: 100px;
-        text-align: right;
-    }
-    .hr-temp ul {
-        display: flex;
-        flex-flow: column nowrap;
     }
 
     footer {
