--- a/acme/css/acme.css
+++ b/acme/css/acme.css
@@ -161,6 +161,11 @@ figcaption {
     display: flex;
     flex-wrap: wrap;
 }
+#side-align li {
+    max-width: 50%;
+ }
+
+
 
 .bold {
     font-weight: bold;
@@ -172,7 +177,7 @@ figcaption {
 }
 
 #item-reviews {
-    margin-top: 10px;
+    margin: 10px 0 0 10px;
 }
 
 #price-align {
@@ -213,7 +218,7 @@ p {
     padding: 0px;
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 775px) {
     html {
         background-repeat: no-repeat;
         background-size: cover;
@@ -236,6 +241,17 @@ p {
 
     #advertisement-banner {
         min-height: 400px;
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    #rocket-ad {
+        padding-top: 20px;
+        margin-right: 5%;
+    }
+
+    #btnitem {
+        margin-top: 10px;
     }
 
     #featured-content {
@@ -253,6 +269,7 @@ p {
 
     #item-display {
         flex-flow: row nowrap;
+        justify-content: center;
     }
 
     #item-image {
@@ -264,11 +281,11 @@ p {
     }
 
     #item-info {
-        max-width: 50%;
+        max-width: 40%;
     }
 
     #manufacturer {
-        margin-right: 50%;
+        margin-right: 40%;
     }
 
 
