--- a/acme/css/acme.css
+++ b/acme/css/acme.css
@@ -77,6 +77,7 @@ h6 {
     min-height: 400px;
     display: flex;
     justify-content: flex-start;
+    margin: 0 8px;
 }
 
 #rocket-ad {
@@ -94,7 +95,7 @@ h6 {
 }
 
 h1 {
-    padding: 5px 0;
+    padding: 10px 0;
     margin-left: 5px;
 }
 
@@ -161,9 +162,10 @@ figcaption {
     display: flex;
     flex-wrap: wrap;
 }
+
 #side-align li {
     max-width: 50%;
- }
+}
 
 
 
@@ -270,6 +272,7 @@ p {
     #item-display {
         flex-flow: row nowrap;
         justify-content: center;
+        align-items: flex-start;
     }
 
     #item-image {
